force-app/main/default/objects/WO_Recordtype__c/WO_Recordtype__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WO_Recordtype</label>
</CustomObject>