force-app/main/default/objects/WO_Recordtype__c/fields/AutresInterventions__c.field-meta.xml
<CustomField>
    <fullName>AutresInterventions__c</fullName>
    <defaultValue>&quot;0120O000000kq5iQAA&quot;</defaultValue>
    <label>Autres Interventions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>