force-app/main/default/objects/WO_Recordtype__c/fields/ChaudiereVapeurTubesDeFumee__c.field-meta.xml
<CustomField>
    <fullName>ChaudiereVapeurTubesDeFumee__c</fullName>
    <defaultValue>&quot;0120O0000003dUfQAI&quot;</defaultValue>
    <label>Chaudiere Vapeur Tubes De Fumee</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>