force-app/main/default/objects/WO_Recordtype__c/fields/WO_A_Rapport_simple__c.field-meta.xml
<CustomField>
    <fullName>WO_A_Rapport_simple__c</fullName>
    <defaultValue>&quot;0120O0000003dTN&quot;</defaultValue>
    <label>WO_A_Rapport_simple</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>