force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVAFT_Chaudiere_fluide_thermique__c.field-meta.xml
<CustomField>
    <fullName>WO_SVAFT_Chaudiere_fluide_thermique__c</fullName>
    <defaultValue>&quot;0120O0000003dUpQAI&quot;</defaultValue>
    <label>WO_SVAFT_Chaudiere_fluide_thermique</label>
    <length>20</length>
    <type>Text</type>
</CustomField>