force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVATF_Chaudiere_vapeur_tubes_de_fumee__c.field-meta.xml
<CustomField>
    <fullName>WO_SVATF_Chaudiere_vapeur_tubes_de_fumee__c</fullName>
    <defaultValue>&quot;0120O0000003dUaQAI&quot;</defaultValue>
    <label>WO_SVATF_Chaudiere_vapeur_tubes_de_fumee</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>