force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVAVI_Chaudiere_vapeur_instantanee__c.field-meta.xml
<CustomField>
    <fullName>WO_SVAVI_Chaudiere_vapeur_instantanee__c</fullName>
    <defaultValue>&quot;0120O0000003dUkQAI&quot;</defaultValue>
    <label>WO_SVAVI_Chaudiere_vapeur_instantanee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>