force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVM_Chaudiere_eau_chaude__c.field-meta.xml
<CustomField>
    <fullName>WO_SVM_Chaudiere_eau_chaude__c</fullName>
    <defaultValue>&quot;0120O0000003dU6QAI&quot;</defaultValue>
    <label>WO_SVM_Chaudiere_eau_chaude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>