force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVM_ChaudiereVapeurTubeDeFumee__c.field-meta.xml
<CustomField>
    <fullName>WO_SVM_ChaudiereVapeurTubeDeFumee__c</fullName>
    <defaultValue>&quot;0120O000000kq4QQAQ&quot;</defaultValue>
    <label>WO_SVM_ChaudiereVapeurTubeDeFumee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>