force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVM_Incinex__c.field-meta.xml
<CustomField>
    <fullName>WO_SVM_Incinex__c</fullName>
    <defaultValue>&quot;0120O0000003dUVQAY&quot;</defaultValue>
    <label>WO_SVM_Incinex</label>
    <length>20</length>
    <type>Text</type>
</CustomField>