force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVM_Traitement_d_air__c.field-meta.xml
<CustomField>
    <fullName>WO_SVM_Traitement_d_air__c</fullName>
    <defaultValue>&quot;0120O0000003dUQQAY&quot;</defaultValue>
    <label>WO_SVM_Traitement_d_air</label>
    <length>20</length>
    <type>Text</type>
</CustomField>