force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVNFE_Tests_securite__c.field-meta.xml
<CustomField>
    <fullName>WO_SVNFE_Tests_securite__c</fullName>
    <defaultValue>&quot;0120O0000003dXZ&quot;</defaultValue>
    <label>WO_SVNFE_Tests_securite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>