force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVP_Traitement_d_eau__c.field-meta.xml
<CustomField>
    <fullName>WO_SVP_Traitement_d_eau__c</fullName>
    <defaultValue>&quot;0120O000000kq3mQAA&quot;</defaultValue>
    <label>WO_SVP_Traitement_d_eau</label>
    <length>20</length>
    <type>Text</type>
</CustomField>