force-app/main/default/objects/WO_Recordtype__c/fields/WO_SVREMTF_Chaudiere_tubes_de_fumees__c.field-meta.xml
<CustomField>
    <fullName>WO_SVREMTF_Chaudiere_tubes_de_fumees__c</fullName>
    <defaultValue>&quot;0120O0000003dV9QAI&quot;</defaultValue>
    <label>WO_SVREMTF_Chaudiere_tubes_de_fumees</label>
    <length>20</length>
    <type>Text</type>
</CustomField>